tests/instantiating/invalid/range_width_conflict_different_types/bus.fbd
type foo config
	range = [1, 2]

main bus
	bar foo
		width = 8
